WIP on update sharing endpoint
Signed-off-by: Craig Perkins <cwperx@amazon.com>